--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "git+https://github.com/dolchi21/file.git"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Axel Dolce",
+    "email": "axel.dolce@gmail.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dolchi21/file/issues"
